--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,22 @@
   "scripts": {
     "run": "node client.js"
   },
+  "pkg": {
+    "assets": [
+      "./node_modules/windows-mutex/build/Release/CreateMutex.node",
+      "./node_modules/node-hide-console-window/build/Release/node-hide-console-window.node"
+    ],
+    "targets": [
+      "node16-win-x64"
+    ]
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "node-hide-console-window": "^2.1.1",
+    "remove": "^0.1.5",
+    "windows-mutex": "^0.4.1"
+  }
 }
