--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "mongoose": "^6.8.1"
+    "js-confuser": "^1.5.4",
+    "mongoose": "^6.8.1",
+    "pkg": "^5.8.0"
   }
 }
